# LG_practice

./: .gitignore  DESCRIPTION  LICENSE  README  README.md
cmake/: CMakeLists.txt  CPackConfig.cmake  FindJsoncpp.cmake
conf/: server.conf
deb_package/: spatium-mock-speech.init  spatium-mock-speech.logrotate  spatium-mock-speech.postinst  spatium-mock-speech.postrm  spatium-mock-speech.prerm
script/: .clang-format  build.sh  build_deb_package.sh  format.sh  run.sh
src/: authcontroller.cpp  authcontroller.hpp  keycloakconf.hpp  main.cpp  request.cpp  request.hpp
src/config/: config.cpp  config.h
